# bill-ingestion-pipelines

./: .council-review-pre.md  .dockerignore  .env.example  .gitignore  .implementation-plan.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.playwright-mcp/: page-2026-04-28T03-36-22-256Z.yml  page-2026-04-28T03-38-34-024Z.yml  page-2026-04-28T03-42-24-323Z.yml  page-2026-04-28T04-24-08-774Z.yml  page-2026-04-28T04-24-39-372Z.yml
alembic/: env.py
alembic/versions/: 21a38ea0e61a_create_bill_tables.py  600c0985b338_enrich_bill_schema_with_chamber_.py  7ab4c9d0e1f2_add_bill_text_chunks.py  8f3c2d1e9a0b_add_hnsw_index_for_bill_embeddings.py  a9a1e0d64a15_add_text_url_to_bills.py  b2c3d4e5f6a7_add_embedding_column.py
app/: cli.py  config.py  main.py  rate_limit.py  text_cache.py
app/api/: bills.py  chat.py  deps.py  limits.py  schemas.py  search.py
app/chat/: llm.py  service.py
app/db/: models.py  session.py
app/ingestion/: daily_dl.py  db_writer.py  embedding_pipeline.py  universe_dl.py  xml_parser.py
docs/: dd.md  overall_design.md
docs/plans/: 2026-03-15-bill-ingestion-pipelines.md  2026-04-12-docker-compose-etl-services.md  2026-04-26-chatbot-api.md  2026-04-26-frontend.md  2026-04-26-schema-enrichment-embedding-pipeline.md  2026-04-26-search-bill-data-api.md
nginx/conf/: app.conf
static/: app.js  bill.html  chat.html  index.html  styles.css
tests/: conftest.py  test_cli.py  test_migrations.py  test_models.py  test_static_serving.py
tests/api/: conftest.py  test_bills.py  test_chat.py  test_fulltext_cache.py  (+3 more)
(+12 files in other folders)
