[project]
name = "bill-retrieval-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "lxml",
    "gitpython",
    "loguru",
    "typer",
    "pydantic-settings",
    "sentence-transformers",
    "openai",
    "anthropic",
    "spacy",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
